# johnchess

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile.in  Johnchess.sln  Johnchess.vcxproj  Johnchess.vcxproj.filters  README  ai.h  ai.txt  board.cpp  board.h  current_board.txt  johnchess_app.cpp  johnchess_app.h  pieces.cpp  pieces.h  xboard_interface.cpp  xboard_interface.h
app/: main.cpp
bitboards/: bitboard.cpp  bitboard.h  bitboard_knight.h
src/: CMakeLists.txt  ai.h  board.cpp  board.h  board_location.cpp  board_location.h  board_tree.cpp  board_tree.h  board_tree_node.cpp  board_tree_node.cpp.orig  board_tree_node.h  board_tree_node.h.orig  heuristic.cpp  heuristic.h  iboard.h  johnchess_app.cpp  johnchess_app.h  move.cpp  move.h  piece_types.h  pieces.cpp  pieces.h  search_tree.cpp  search_tree.h  search_tree_node.cpp  search_tree_node.h  square.h  xboard_interface.cpp  xboard_interface.h  zobrist_hash.cpp  zobrist_hash.h
src/bitboards/: bitboard.cpp  bitboard.h  bitboard_ray_attacks.cpp  bitboard_ray_attacks.h  bitboard_utils.h
src/utils/: board_strings.cpp  board_strings.h  generate_bitboard_luts.py  perft.h  pychess-perft.py
tests/: CMakeLists.txt  Johnchess_test.vcxproj  Johnchess_test.vcxproj.filters  perft.cpp  test_ai.cpp  test_bitboard.cpp  test_board.cpp  test_heuristic.cpp  test_read_write_board.cpp  test_xboard_interface.cpp  test_zobrist_hash.cpp
